Cambio de etiquetas

--- a/paginas/etiquetas.html
+++ b/paginas/etiquetas.html
@@ -7,6 +7,17 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <P>estos son unos ejemplos de etiqueta</P>
+    <P>Estos son unos ejemplos de etiqueta</P>
+    <br>
+    <h1> 1. < kbd >:Entrada del teclado. </h1>
+    <br>
+    <h1> 2. < samp   > : Muestra de salida de un programa informático. </h1>
+    <br>
+    <h1> 3. < base > : Url base para todas las Url relativas dentro del documento </h1>
+    <br>
+    <h1> 4. : < area > Área de un mapa de imagen    </h1>
+    <br>
+    <h1> 5. : < param > Parámetro para un elemento < Objeto > </h1>
+
     </body>
 </html>
